--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -1,19 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.background {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +9,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background > div {
+  background-color: rgb(39, 39, 39);
+  color: rgb(255, 255, 255);
 }
